--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 2.8.12...3.27)
 
 # Compiler requirements
 set(CMAKE_CXX_STANDARD 11)
